lib/velosiast/tests/vrs/interface/interface_err_00_double_parameter_expected.txt
error: duplicate definitions with name `base`
     --> tests/vrs/interface/interface_err_00_double_parameter.vrs:1:38
      |
    1 |  interface = InterfaceDef(base: addr, base: addr) {
      |                           ^^^^^^^^^^ previous definition of `base` was here
   ...
      |
    1 |  interface = InterfaceDef(base: addr, base: addr) {
      |                                       ^^^^^^^^^^ duplicate definition
error: could not compile due to 1 previous errors; 0 warnings emitted


@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@

